Add Undo/Redo sample

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "com.lance.designpattern",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "displayName": "Design Pattern",
   "description": "A collection of design patterns and architectures implementations",
   "samples": [
@@ -8,6 +8,11 @@
       "displayName": "MVVM",
       "description": "Model-View-ViewModel pattern",
       "path": "Samples~/MVVM"
+    },
+    {
+      "displayName": "UndoRedo",
+      "description": "Undo/Redo implementation",
+      "path": "Samples~/UndoRedo"
     }
   ],
   "author": {
