--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "com.lance.designpattern",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "displayName": "Design Pattern",
   "description": "A collection of design patterns and architectures implementations",
   "samples": [
@@ -8,6 +8,11 @@
       "displayName": "MVVM",
       "description": "Model-View-ViewModel pattern",
       "path": "Samples~/MVVM"
+    },
+    {
+      "displayName": "Notification",
+      "description": "Notification service",
+      "path": "Samples~/Notification"
     },
     {
       "displayName": "UndoRedo",
